--- a/index.html
+++ b/index.html
@@ -244,9 +244,7 @@ https://templatemo.com/tm-540-lava-landing-page
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
                         <h2>More About <em>Grasp</em></h2>
                         <p>Grasp is an education and media platform for the communities to learn and see the different kind of stories, facts and figure , different aspects of the world via. video and articles in different section available in-app.
-                            Videos,articles are gathered from different sources available on the internet with reliable research'
-                     
-                                                               <br><br> Actual publisher or creator credit given in the app in different section'
+                            Videos,articles are gathered from different sources available on the internet with reliable research.
                             <br><br>contact us at graspapp7@gmail.com or dvmjoshi7@gmail.com <a
                                 rel="nofollow" href="https://templatemo.com/contact" target="_parent">contact</a> page
                             for more detail.</p>
